# cdxjl

./: .gitignore  README.md  pyproject.toml  sbom.json
cdxjl/: __main__.py  builder.py  flags.py  parse.py
tests/: test_build.py  test_flags.py  test_parse.py
tests/example_data/: Manifest.toml  Project.toml
